--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,11 @@
 
 .vscode
 
+# vritual env
+.venv
+.env
+
+# python
 __pycache__
 
 #logs
@@ -18,3 +23,4 @@ logs/*
 # images
 PetImages/
 testData/
+result/
